switch to JDK 11 friendly way of converting boxed Integer stream to list